# emma

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/workflows/: rust-ci.yml
benchmark/: .gitignore  run.py  run.sh
benchmark/allocator/: Cargo.toml
benchmark/allocator/src/: lib.rs
benchmark/chaos/: .gitignore  Cargo.toml
benchmark/chaos/src/: arcs.rs  main.rs  numbers.rs
benchmark/harness/: Cargo.toml
benchmark/harness/.cargo/: config.toml
benchmark/harness/src/: arcs.rs  main.rs  numbers.rs
benchmark/hoard/: README.md
benchmark/hoard/cache-scratch/: Cargo.toml
benchmark/hoard/cache-scratch/src/: main.rs
benchmark/hoard/cache-thrash/: Cargo.toml
benchmark/hoard/cache-thrash/src/: main.rs
benchmark/hoard/common/: .gitignore  Cargo.toml
benchmark/hoard/common/src/: fred.rs  lib.rs  timer.rs
benchmark/hoard/threadtest/: Cargo.toml
benchmark/hoard/threadtest/src/: main.rs
src/: lib.rs
src/emma/: heap_manager.rs  mod.rs
src/emma/arena/: mod.rs
src/emma/arena/large_object/: mod.rs
src/emma/arena/large_objects/: mod.rs
src/emma/arena/medium_object/: mod.rs
src/emma/arena/medium_objects/: mod.rs
src/emma/arena/small_object/: mod.rs
src/emma/arena/small_objects/: mod.rs
src/mmap/: mod.rs
src/mmap/syscalls/: madvise.rs  mmap.rs  mod.rs  mremap.rs  munmap.rs
src/sync/: futex.rs  mod.rs  spinlock.rs
src/sync/syscalls/: futex.rs  mod.rs  sched.rs
src/sys/: mod.rs
src/sys/syscalls/: mod.rs
tests/: large_objects.rs  medium_objects.rs  rand.rs  simple_nostd.rs  simple_std.rs  small_objects.rs  threaded.rs
