[package]
name = "emma"
version = "0.0.2"
authors = ["Daniel Schemmel <daniel@schemmel.net"]
repository = "https://github.com/danielschemmel/emma/"
license = "MIT OR Apache-2.0"
description = "A full-fledged `no_std` and \"no-libc\" capable memory allocator."
keywords = ["alloc", "allocator", "malloc", "no_std"]
readme = "README.md"

edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
bitflags = "2.8.0"
linux-raw-sys = { version = "0.7.0", default-features = false, features = ["no_std", "general"] }
lock_api = "0.4.12"
static_assertions = "1.1.0"
syscalls = { version = "0.6.18", default-features = false }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rangemap = "1.5.1"

[features]
default = []
tls = []
boundary-checks = []
