[package]
authors = ["Daniel Schemmel <daniel@schemmel.net"]
description = "A full-fledged `no_std` and \"no-libc\" capable memory allocator."
keywords = ["alloc", "allocator", "malloc", "no_std"]
license = "MIT OR Apache-2.0"
name = "emma"
readme = "README.md"
repository = "https://github.com/danielschemmel/emma/"
version = "0.0.2"

edition = "2024"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
bitflags = "2.8.0"
linux-raw-sys = { version = "0.10.0", default-features = false, features = ["general", "no_std"] }
lock_api = "0.4.12"
static_assertions = "1.1.0"
syscalls = { version = "0.6.18", default-features = false }

[dev-dependencies]
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_distr = "0.5.0"
rangemap = "1.5.1"

[features]
default = []

boundary-checks = []
tls = []
