[package]
name = "allocator"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
emma = { path = "../../", optional = true }
libc_alloc = { version = "1.0.7", optional = true }
tikv-jemallocator = { version = "0.6.0", optional = true }
mimalloc = { version = "0.1.43", optional = true }

[features]
emma = ["dep:emma"]
emma-tls = ["emma", "emma?/tls"]
std = []
libc = ["dep:libc_alloc"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
