[package]
edition = "2024"
name = "allocator"
publish = false
version = "0.0.0"

[dependencies]
emma = { path = "../../", optional = true }
libc_alloc = { version = "1.0.7", optional = true }
mimalloc = { version = "0.1.43", optional = true }
tikv-jemallocator = { version = "0.6.0", optional = true }

[features]
emma = ["dep:emma"]
emma-tls = ["emma", "emma?/tls"]
jemalloc = ["dep:tikv-jemallocator"]
libc = ["dep:libc_alloc"]
mimalloc = ["dep:mimalloc"]
std = []
