[package]
name = "harness"
version = "0.0.0"
edition = "2021"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = true

[dependencies]
num-bigint = "0.4.6"
static_assertions = "1.1.0"

emma = { path = "../../", optional = true }
tikv-jemallocator = { version = "0.6.0", optional = true }
mimalloc = { version = "0.1.43", optional = true }

[features]
emma = ["dep:emma"]
emma-tls = ["emma", "emma?/tls"]
std = []
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
